# semeval2026-task1-mwahaha

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/evaluated/: final_eval.jsonl  result_competition_gemma_llama.jsonl  result_competition_gemma_qwen.json  result_competition_gemma_qwen.jsonl  result_competition_qwen_llama.jsonl
data/evaluated/Final_eval/: final_eval_summary.json
data/evaluated/rag/: result_rag_competition_gemma_llama.jsonl  result_rag_competition_gemma_qwen.jsonl  result_rag_competition_llama_qwen.jsonl
src/Rag/: lama_final.ipynb
src/Rag/gemma/: gemma_dual_rag.ipynb  gemma_dual_rag.py  outputs_gemma_dual_rag.jsonl
src/Rag/lama/: gen_lama_dual_rag.ipynb  gen_lama_dual_rag.py  gen_lama_rag.ipynb  outputs_llama_dual_rag.jsonl  outputs_llama_rag.jsonl
src/Rag/qwen/: outputs_qwen_dual_rag.jsonl  outputs_qwen_rag.jsonl  qwen_dual.ipynb  qwen_dual.py  qwen_rag.ipynb  qwen_rag.py
src/Rag_Tests/: README.md
src/data generation/: generate_synthetic_data.ipynb  sample_shortjokes.ipynb
src/evaluation/: gemma_judge.py  llama_judge.ipynb  qwen_judge.py
src/evaluation/unsloth/: gemma_judge_unsloth.py  llama_judge_unsloth.py  qwen_judge_unsloth.py
src/fine_tuning/: dpo_finetuning.ipynb
src/fine_tuning/Dpo/: dpo_finetuning.ipynb
src/generation/: gen_gemma.py  gen_qwen.py  llama_generator.ipynb
src/humor/: __init__.py  config.py  generate.py  generate_rag.py  io_utils.py  judge.py  models.py  parsing.py  prompts.py  retrieval.py
src/synthetic_data_generation/: generate_synthetic_data.ipynb  sample_shortjokes.ipynb
(+46 files in other folders)
